--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,11 +17,12 @@ target 'SocialApp' do
     # Pods for testing
   end
 
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable the next line.
-  use_flipper!()
+   # Enables Flipper.
+   #
+   # Note that if you have use_frameworks! enabled, Flipper will not work and
+   # you should disable these next few lines.
+   use_flipper!
+
 
   post_install do |installer|
     react_native_post_install(installer)
