--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.64.2",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-bottom-sheet": "^1.0.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-haptic-feedback": "^1.11.0",
     "react-native-paper": "^4.9.2",
