--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/material-bottom-tabs": "^6.0.0-next.14",
     "@react-navigation/native": "^6.0.0-next.13",
     "@react-navigation/stack": "^5.14.5",
@@ -25,6 +26,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
