--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@coffeebeanslabs/react-native-inviewport": "^0.2.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/material-bottom-tabs": "^6.0.0-next.14",
     "@react-navigation/native": "^6.0.0-next.13",
@@ -21,6 +22,7 @@
     "react-native-gesture-bottom-sheet": "^1.0.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-haptic-feedback": "^1.11.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
