--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-bottom-sheet": "^1.0.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-haptic-feedback": "^1.11.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
@@ -29,8 +30,8 @@
     "react-native-screens": "^3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "react-redux": "^7.2.4",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.0.5"
   },
   "devDependencies": {
